# augustus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
augustus/: __init__.py  __main__.py
augustus/src/: config.py
augustus/src/ioc/: __init__.py  ipv4.py
augustus/src/iocs/: ipv4.py
augustus/src/osint/: __init__.py  aclient.py  malwarebazaar.py  otx.py  pulsedive.py  sans.py  talos.py  threatfox.py  threatminer.py  urlhaus.py
augustus/src/osint/key/: __init__.py  shodan.py  threatfox.py  urlhaus.py
augustus/src/osint/nokey/: __init__.py  malwarebazaar.py  otx.py  pulsedive.py  sans.py  shodan.py  talos.py  threatminer.py
docs/: conf.py  index.md  usage.md
notebooks/: research.ipynb
tests/augustus/: test_sample.py
