[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "augustus"
version = "0.0.1"
description = "A simple plug-n-play threat intel tool to quickly enrich IOCs."
authors = ["Carlos Gomez <crgomez@udallas.edu>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cgomez23/augustus"
repository = "https://github.com/cgomez23/augustus"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/cgomez23/augustus/issues"

[tool.poetry.scripts]
augustus = "augustus.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10.0"
click = "*"
rich = "^13.7.1"
colorlog = "^6.8.2"
bs4 = "^0.0.2"
httpx = "^0.27.2"

[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "*"
isort = "*"
jedi-language-server = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"
typeguard = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
darglint = "*"
pyinstaller = "*"

[tool.poetry.group.docs.dependencies]
furo = "*"
myst_parser = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
select = ["ALL"]
lines-after-imports = 2
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.bandit]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
